fix secondary-nav responsiveness. hide overflow-x on outerwrapper for > 768. Closes DLC-747

--- a/app/assets/stylesheets/_base_layout.scss
+++ b/app/assets/stylesheets/_base_layout.scss
@@ -100,6 +100,9 @@ input {
 	background-color: $color_primary_background;
 	border: 1px solid $color_outline;
 	border-top: 0;
+	@media(min-width: 768px) {
+		overflow-x: hidden;
+	}
 }
 
 #topnavbar {
@@ -186,6 +189,10 @@ input {
 				padding-bottom: 0;
 				font-size: 1.80em;
 				text-decoration: none;
+				text-align: center;
+				@media(min-width: 768px) {
+					text-align: left;
+				}
 				vertical-align: bottom;
 			}
 		}
@@ -289,29 +296,45 @@ input {
 }
 
 #secondary-nav {
-	height: 24px;
 	padding: 0 12px;
-	margin: 0 -24px;
-	line-height: 3px;
+	margin: 0 -1.5em;
 	border-bottom: 1px solid $color_outline;
-	.nav > li {
-		> a {
-			font-size:.825em;
-			font-family: $font_b;
-			text-transform:uppercase;
-			> .glyphicon {
-				line-height: inherit;
+	.nav {
+		width: 100%;
+		> li {
+			display: block;
+			width: 100%;
+			margin: 0 auto;
+			text-align: center;
+			border: 0;
+			@media(min-width: 768px) {
+				text-align: left;
+				width: auto;
+				text-align: left;
+			}
+			> a {
+				font-size:.825em;
+				font-family: $font_b;
+				text-transform:uppercase;
+				> .glyphicon {
+					line-height: inherit;
+				}
 			}
 		}
 	}
 
 	li {
 		border-left: 1px solid lighten($color_outline, 13%);
-		max-height: 22px;
 		&:first-child, .dropdown-menu li {
 			border-left: 0;
 		}
 		.dropdown-menu {
+			width: 100%;
+			text-align: center;
+			@media(min-width: 768px) {
+				width: auto;
+				text-align: left;
+			}
 			background-color: lighten($color_primary_background,10%);
 			border: 1px solid lighten($color_primary_background,25%);
 			border-top-color: transparent;
